Fix bottom div spacing on mobile

--- a/packages/common-ui/styles/responsive.less
+++ b/packages/common-ui/styles/responsive.less
@@ -69,7 +69,9 @@ body:not(.embed-view) {
         }
 
         gear-set-viewer {
-          padding: 0;
+          // Small padding top, no padding sides, larger padding bottom.
+          padding: 10px 0 100px;
+
           // This gets capped to 100% width anyway
           --item-table-max-width: 800px;
 
